--- a/.prettierrc
+++ b/.prettierrc
@@ -6,8 +6,8 @@
 	"htmlWhitespaceSensitivity": "css",
 	"insertPragma": false,
 	"jsxSingleQuote": true,
-	"printWidth": 100,
-	"proseWrap": "preserve",
+	"printWidth": 80,
+	"proseWrap": "always",
 	"quoteProps": "as-needed",
 	"requirePragma": false,
 	"semi": true,
