--- a/package.json
+++ b/package.json
@@ -12,27 +12,32 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@reduxjs/toolkit": "^1.8.2",
     "axios": "^0.26.1",
     "cookies": "^0.8.0",
     "http-proxy": "^1.18.1",
     "next": "12.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "swr": "^1.2.2"
+    "react-redux": "^8.0.2",
+    "swr": "^1.2.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/cookies": "^0.7.7",
-    "@types/http-proxy": "^1.17.8",
-    "@types/node": "17.0.23",
-    "@types/react": "17.0.43",
-    "@types/react-dom": "17.0.14",
-    "autoprefixer": "^10.4.4",
-    "eslint": "8.12.0",
-    "eslint-config-next": "12.1.1",
-    "postcss": "^8.4.12",
-    "sass": "^1.49.9",
-    "tailwindcss": "^3.0.23",
-    "typescript": "4.6.3"
+    "@types/http-proxy": "^1.17.9",
+    "@types/node": "^17.0.42",
+    "@types/react": "^18.0.12",
+    "@types/react-dom": "^18.0.5",
+    "@types/react-redux": "^7.1.24",
+    "@types/uuid": "^8.3.4",
+    "autoprefixer": "^10.4.7",
+    "eslint": "^8.17.0",
+    "eslint-config-next": "^12.1.6",
+    "postcss": "^8.4.14",
+    "sass": "^1.52.3",
+    "tailwindcss": "^3.1.2",
+    "typescript": "^4.7.3"
   }
 }
