--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@reduxjs/toolkit": "^1.8.2",
     "axios": "^0.26.1",
     "cookies": "^0.8.0",
     "http-proxy": "^1.18.1",
     "next": "12.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.4.0",
+    "react-redux": "^8.0.2",
     "swr": "^1.2.2"
   },
   "devDependencies": {
